Fix alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -903,6 +903,7 @@ textarea {
 .doc-content {
     padding: 105px 24px;
     display: flex;
+    justify-content: center;
     min-height: 90vh;
 }
 .playground-content {
